# fishmlserv

./: .Dockerfile.swp  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  r.txt  requirements.txt
LB/: default.conf
note/: Untitled.ipynb  first model.ipynb  ss.ipynb
src.temp/fishmlserv/model/: cli.py  manager.py  model.pkl
src/fishmlserv/: .curl.py.swp  .main.py.swp  curl.py  data.py  knn.py  main.py  prediction.py
src/fishmlserv/model/: .manager.py.swp  manager.py
