[project]
name = "fishmlserv"
version = "1.5.1"
description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
authors = [
    {name = "Nicou11", email = "lyoungin1204@gmail.com"},
]
dependencies = [ 
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
get-model-path = "fishmlserv.model.manager:get_model_path"
pre = "fishmlserv.model.cli:pp"

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.7.5",
]

test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
